[project]
name = "hello-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "grandalf>=0.8",
    "ipython>=9.14.1",
    "langchain>=1.3.10",
    "langchain-anthropic>=1.4.6",
    "langgraph>=1.2.6",
    "langgraph-cli[inmem]>=0.4.30",
]
